--- a/NLP_Project_Solo.ipynb
+++ b/NLP_Project_Solo.ipynb
@@ -2756,6 +2756,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.seq_relationship.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight']\n",
+      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.weight', 'classifier.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: train_loss=1.0283 train_accuracy=1.0000 test_loss=1.3844 test_accuracy=0.0000 test_f1=0.0000\n",
+      "Epoch 2: train_loss=1.0449 train_accuracy=1.0000 test_loss=1.7805 test_accuracy=0.0000 test_f1=0.0000\n",
+      "Epoch 3: train_loss=0.7998 train_accuracy=1.0000 test_loss=2.0592 test_accuracy=0.0000 test_f1=0.0000\n",
+      "Epoch 4: train_loss=0.5699 train_accuracy=1.0000 test_loss=2.5038 test_accuracy=0.0000 test_f1=0.0000\n",
+      "Epoch 5: train_loss=0.4173 train_accuracy=1.0000 test_loss=2.6715 test_accuracy=0.0000 test_f1=0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import BertTokenizer, BertForSequenceClassification\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import f1_score\n",
+    "import torch\n",
+    "\n",
+    "# Load the pre-trained BERT tokenizer and model\n",
+    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "model = BertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels=5)\n",
+    "\n",
+    "# Prepare the data\n",
+    "X = [\"This is a positive example.\", \"This is a negative example.\"]\n",
+    "y = [1, 0]\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Tokenize the text data\n",
+    "train_encodings = tokenizer(X_train, truncation=True, padding=True)\n",
+    "test_encodings = tokenizer(X_test, truncation=True, padding=True)\n",
+    "\n",
+    "# Convert the tokenized data into PyTorch tensors\n",
+    "train_dataset = torch.utils.data.TensorDataset(\n",
+    "    torch.tensor(train_encodings['input_ids']),\n",
+    "    torch.tensor(train_encodings['attention_mask']),\n",
+    "    torch.tensor(y_train)\n",
+    ")\n",
+    "test_dataset = torch.utils.data.TensorDataset(\n",
+    "    torch.tensor(test_encodings['input_ids']),\n",
+    "    torch.tensor(test_encodings['attention_mask']),\n",
+    "    torch.tensor(y_test)\n",
+    ")\n",
+    "\n",
+    "# Train the model\n",
+    "model.train()\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=2, shuffle=True)\n",
+    "optim = torch.optim.Adam(model.parameters(), lr=5e-5)\n",
+    "for epoch in range(5):\n",
+    "    for batch in train_loader:\n",
+    "        optim.zero_grad()\n",
+    "        input_ids, attention_mask, labels = batch\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "        loss = outputs.loss\n",
+    "        loss.backward()\n",
+    "        optim.step()\n",
+    "\n",
+    "        # Compute training loss and accuracy\n",
+    "        train_loss = loss.item()\n",
+    "        train_logits = outputs.logits\n",
+    "        train_predictions = torch.argmax(train_logits, dim=1)\n",
+    "        train_accuracy = (train_predictions == labels).float().mean().item()\n",
+    "\n",
+    "    # Evaluate the model\n",
+    "    model.eval()\n",
+    "    test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=2, shuffle=False)\n",
+    "    with torch.no_grad():\n",
+    "        predictions = []\n",
+    "        true_labels = []\n",
+    "        test_loss = 0\n",
+    "        for batch in test_loader:\n",
+    "            input_ids, attention_mask, labels = batch\n",
+    "            outputs = model(input_ids, attention_mask=attention_mask, labels=labels)\n",
+    "            loss = outputs.loss\n",
+    "            test_loss += loss.item()\n",
+    "            logits = outputs.logits\n",
+    "            batch_predictions = torch.argmax(logits, dim=1)\n",
+    "            predictions.extend(batch_predictions.tolist())\n",
+    "            true_labels.extend(labels.tolist())\n",
+    "\n",
+    "        # Compute validation loss and accuracy\n",
+    "        test_loss /= len(test_loader)\n",
+    "        test_f1 = f1_score(true_labels, predictions)\n",
+    "        test_accuracy = (torch.tensor(predictions) == torch.tensor(true_labels)).float().mean().item()\n",
+    "\n",
+    "    print(f\"Epoch {epoch + 1}: train_loss={train_loss:.4f} train_accuracy={train_accuracy:.4f} \"\n",
+    "          f\"test_loss={test_loss:.4f} test_accuracy={test_accuracy:.4f} test_f1={test_f1:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
